# gtk-egui-area

./: Cargo.toml  LICENSE  README.md
examples/: demo.rs  synced.rs
src/: egui_area.rs  lib.rs  main.rs
