[package]
name = "gtk-egui-area"
version = "0.1.0"
edition = "2021"
description = "EguiArea widget for embedding inside of GTK"
license = "MIT"

[dependencies]
egui = "0.28.1"
egui_glow = "0.28.1"
epoxy = "0.1.0"
gl_loader = "0.1.2"
gtk = { version = "0.9.1", package = "gtk4" }
libloading = "0.8.5"

[dev-dependencies]
egui_demo_lib = "0.28.1"
